--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,11 @@
 {
-	"name": "node-vpdb",
-	"version": "0.0.5",
-	"homepage": "https://github.com/vpdb/backend",
+	"name": "vpdb-website",
+	"version": "1.0.0",
+	"homepage": "https://github.com/vpdb/website",
 	"authors": [
-		"freezy <freezy@xbmc.org>"
+		"freezy <freezy@kodi.tv>"
 	],
-	"description": "A database for Visual Pinball resources",
-	"main": "app.js",
+	"description": "A database for Virtual Pinball resources",
 	"moduleType": [
 		"node"
 	],
