--- a/package.json
+++ b/package.json
@@ -1,83 +1,16 @@
 {
-	"name": "vpdb",
-	"version": "v1.0.5",
-	"description": "Virtual Pinball Database",
-	"main": "app.js",
+	"name": "vpdb-website",
+	"version": "1.0.0",
+	"description": "VPDB Web Application",
 	"private": true,
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/vpdb/backend"
+		"url": "https://github.com/vpdb/website"
 	},
-	"keywords": [
-		"visual pinball",
-		"vp10",
-		"vpx"
-	],
 	"author": "freezy",
 	"license": "GPLv2",
 	"bugs": {
-		"url": "https://github.com/vpdb/backend/issues"
-	},
-	"dependencies": {
-		"@slack/client": "^3.6.0",
-		"acl": "0.4.11",
-		"archiver": "2.0.3",
-		"base64-stream": "0.1.3",
-		"bluebird": "3.5.0",
-		"body-parser": "1.18.1",
-		"buffer-indexof": "1.1.1",
-		"bull": "3.2.0",
-		"busboy": "0.2.14",
-		"cheerio": "0.22.0",
-		"colors": "1.1.2",
-		"compression": "1.7.0",
-		"ent": "2.2.0",
-		"errorhandler": "1.5.0",
-		"express": "4.15.4",
-		"express-domain-errors": "0.0.2",
-		"express-winston": "2.4.0",
-		"extsprintf": "1.3.0",
-		"fluent-ffmpeg": "2.1.2",
-		"glob": "7.1.2",
-		"gm": "1.23.0",
-		"handlebars": "4.0.10",
-		"jwt-simple": "0.5.1",
-		"lodash": "4.17.4",
-		"md5": "2.2.1",
-		"mongoose": "4.11.12",
-		"mongoose-paginate": "5.0.3",
-		"mongoose-unique-validator": "1.0.2",
-		"morgan": "1.8.2",
-		"newrelic": "1.33.0",
-		"nodemailer": "4.1.0",
-		"ole-doc": "0.1.1",
-		"optipng": "1.1.0",
-		"passport": "0.4.0",
-		"passport-github": "1.1.0",
-		"passport-google-oauth": "1.0.0",
-		"passport-oauth": "1.0.0",
-		"pkginfo": "0.4.1",
-		"pmx": "1.5.2",
-		"pngquant": "1.3.0",
-		"project-name-generator": "2.1.3",
-		"pusher": "1.5.1",
-		"randomstring": "1.1.5",
-		"raygun": "0.9.1",
-		"redis": "2.8.0",
-		"request": "2.82.0",
-		"sax": "1.2.4",
-		"shortid32": "0.1.1",
-		"three": "0.82.1",
-		"uglify-js": "3.1.1",
-		"unrar": "0.1.7",
-		"unzip": "0.1.11",
-		"validator": "8.2.0",
-		"verror": "1.10.0",
-		"volos-quota-redis": "0.11.2",
-		"winston": "2.3.1",
-		"winston-papertrail": "1.0.5",
-		"wiredep": "4.0.0",
-		"xmlbuilder": "9.0.4"
+		"url": "https://github.com/vpdb/website/issues"
 	},
 	"devDependencies": {
 		"adm-zip": "0.4.7",
@@ -128,12 +61,5 @@
 		"stylus": "0.54.5",
 		"superagent": "3.6.0",
 		"yargs": "3.32.0"
-	},
-	"engines": {
-		"node": "8.x"
-	},
-	"scripts": {
-		"test": "grunt ci"
-	},
-	"mod-project-name": "vpdb"
+	}
 }
