--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"ng-annotate-patched": "^1.6.0",
 		"pug": "^2.0.0-rc.4",
 		"pug-loader": "^2.3.0",
+		"pug-html-loader": "^1.1.5",
 		"raw-loader": "^0.5.1",
 		"style-loader": "^0.19.0",
 		"stylus": "^0.54.5",
