Added first E2E test.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
 	"main": "index.js",
 	"scripts": {
 		"prod": "cross-env CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
-		"local": "cross-env CONFIG=local webpack-dev-server --history-api-fallback --inline --progress"
+		"local": "cross-env CONFIG=local webpack-dev-server --history-api-fallback --inline --progress",
+		"test:clean": "node_modules/.bin/rimraf ./test",
+		"test:compile": "node_modules/.bin/tsc",
+		"test:protractor": "node_modules/.bin/protractor test/config/protractor.js",
+		"test:run": "node_modules/.bin/run-s test:clean test:compile test:protractor"
 	},
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPLv2",
@@ -36,22 +40,29 @@
 		"traverse": "^0.6.6"
 	},
 	"devDependencies": {
+		"@types/jasmine": "^2.6.3",
+		"@types/jasminewd2": "^2.0.3",
 		"cross-env": "^5.1.0",
 		"css-loader": "^0.28.7",
 		"extract-text-webpack-plugin": "^3.0.1",
 		"file-loader": "^1.1.5",
 		"html-webpack-plugin": "^2.30.1",
+		"jasmine": "^2.8.0",
 		"ng-annotate-loader": "^0.6.1",
 		"ng-annotate-patched": "^1.6.0",
+		"npm-run-all": "^4.1.2",
+		"protractor": "^5.2.0",
 		"pug": "^2.0.0-rc.4",
-		"pug-loader": "^2.3.0",
 		"pug-html-loader": "^1.1.5",
+		"pug-loader": "^2.3.0",
 		"raw-loader": "^0.5.1",
 		"style-loader": "^0.19.0",
 		"stylus": "^0.54.5",
 		"stylus-loader": "^3.0.1",
 		"svg-sprite-loader": "^3.4.0",
 		"svgo-loader": "^1.2.1",
+		"ts-node": "^3.3.0",
+		"typescript": "^2.6.1",
 		"url-loader": "^0.6.2",
 		"webpack": "^3.6.0",
 		"webpack-dev-server": "^2.9.1",
