Added production config.

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"prod": "cross-env CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
-		"local": "cross-env CONFIG=local webpack-dev-server --history-api-fallback --inline --progress",
-		"test": "cross-env CONFIG=test webpack-dev-server --history-api-fallback --inline --progress",
-		"test:clean": "node_modules/.bin/rimraf ./test",
-		"test:compile": "node_modules/.bin/tsc",
-		"test:protractor": "node_modules/.bin/protractor test/config/protractor.js",
-		"test:run": "node_modules/.bin/run-s test:clean test:compile test:protractor"
+		"prod": "cross-env CONFIG=prod ENV=prod webpack-dev-server --history-api-fallback --inline --progress",
+		"local": "cross-env CONFIG=local ENV=dev webpack-dev-server --history-api-fallback --inline --progress",
+		"test": "cross-env CONFIG=test ENV=test webpack-dev-server --history-api-fallback --inline --progress",
+		"test:clean": "rimraf ./test",
+		"test:compile": "tsc",
+		"test:protractor": "protractor test/config/protractor.js",
+		"test:run": "run-s test:clean test:compile test:protractor"
 	},
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPLv2",
@@ -52,6 +52,7 @@
 		"ng-annotate-loader": "^0.6.1",
 		"ng-annotate-patched": "^1.6.0",
 		"npm-run-all": "^4.1.2",
+		"optimize-js-plugin": "0.0.4",
 		"protractor": "^5.2.0",
 		"pug": "^2.0.0-rc.4",
 		"pug-html-loader": "^1.1.5",
@@ -64,6 +65,7 @@
 		"svgo-loader": "^1.2.1",
 		"ts-node": "^3.3.0",
 		"typescript": "^2.6.1",
+		"uglifyjs-webpack-plugin": "^1.0.1",
 		"url-loader": "^0.6.2",
 		"webpack": "^3.6.0",
 		"webpack-dev-server": "^2.9.1",
