--- a/package.json
+++ b/package.json
@@ -34,17 +34,18 @@
 		"lodash": "^4.17.4",
 		"magnific-popup": "^1.1.0",
 		"ment.io": "^0.9.23",
-		"moment": "^2.19.1",
+		"moment": "^2.19.2",
 		"ng-file-upload": "^12.2.13",
 		"ngclipboard": "^1.1.2",
 		"ngstorage": "^0.3.11",
 		"nib": "^1.1.2",
 		"parse-uri": "^1.0.0",
-		"showdown": "^1.7.6",
-		"traverse": "^0.6.6"
+		"showdown": "^1.8.2",
+		"traverse": "^0.6.6",
+		"video.js": "^6.2.8"
 	},
 	"devDependencies": {
-		"@types/jasmine": "^2.6.3",
+		"@types/jasmine": "^2.8.2",
 		"@types/jasminewd2": "^2.0.3",
 		"cross-env": "^5.1.0",
 		"css-loader": "^0.28.7",
@@ -65,7 +66,8 @@
 		"stylus": "^0.54.5",
 		"stylus-loader": "^3.0.1",
 		"svg-sprite-loader": "^3.4.0",
-		"svgo-loader": "^1.2.1",
+		"svgo": "^1.0.3",
+		"svgo-loader": "^2.0.0",
 		"ts-node": "^3.3.0",
 		"typescript": "^2.6.1",
 		"uglifyjs-webpack-plugin": "^1.0.1",
