--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"uglifyjs-webpack-plugin": "^1.0.1",
 		"url-loader": "^0.6.2",
 		"webpack": "^3.6.0",
+		"webpack-bundle-analyzer": "^2.9.1",
 		"webpack-dev-server": "^2.9.1",
 		"webpack-merge": "^4.1.0"
 	}
