--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 		"local": "cross-env CONFIG=local ENV=dev webpack-dev-server --history-api-fallback --inline --progress",
 		"localprod": "cross-env CONFIG=prod ENV=dev webpack-dev-server --history-api-fallback --inline --progress",
 		"test": "cross-env CONFIG=test ENV=test webpack-dev-server --history-api-fallback --inline --progress",
+		"build:clean": "rimraf ./dist",
+		"build:run": "cross-env CONFIG=prod ENV=prod webpack --bail --progress --profile",
+		"build": "run-s build:clean build:run",
 		"test:clean": "rimraf ./test",
 		"test:compile": "tsc",
 		"test:protractor": "protractor test/config/protractor.js",
@@ -47,6 +50,7 @@
 	"devDependencies": {
 		"@types/jasmine": "^2.8.2",
 		"@types/jasminewd2": "^2.0.3",
+		"babel-minify-webpack-plugin": "^0.2.0",
 		"cross-env": "^5.1.0",
 		"css-loader": "^0.28.7",
 		"extract-text-webpack-plugin": "^3.0.1",
@@ -56,7 +60,6 @@
 		"ng-annotate-loader": "^0.6.1",
 		"ng-annotate-patched": "^1.6.0",
 		"npm-run-all": "^4.1.2",
-		"optimize-js-plugin": "0.0.4",
 		"protractor": "^5.2.0",
 		"pug": "^2.0.0-rc.4",
 		"pug-html-loader": "^1.1.5",
@@ -70,11 +73,11 @@
 		"svgo-loader": "^2.0.0",
 		"ts-node": "^3.3.0",
 		"typescript": "^2.6.1",
-		"uglifyjs-webpack-plugin": "^1.0.1",
 		"url-loader": "^0.6.2",
 		"webpack": "^3.6.0",
 		"webpack-bundle-analyzer": "^2.9.1",
 		"webpack-dev-server": "^2.9.1",
-		"webpack-merge": "^4.1.0"
+		"webpack-merge": "^4.1.0",
+		"webpack-sources": "1.0.1"
 	}
 }
