--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
 		"angular-dragdrop": "^1.0.13",
 		"angular-elastic": "^2.5.1",
 		"angular-gravatar": "^0.4.2",
-		"angular-moment": "^1.1.0",
 		"angular-resource": "^1.6.6",
 		"angular-sanitize": "^1.6.6",
+		"angular-timeago": "^0.4.6",
 		"angular-touch": "^1.6.6",
 		"angular-ui-bootstrap": "^2.5.0",
 		"angular-ui-router": "^0.4.3",
@@ -37,7 +37,6 @@
 		"lodash": "^4.17.4",
 		"magnific-popup": "^1.1.0",
 		"ment.io": "^0.9.23",
-		"moment": "^2.19.2",
 		"ng-file-upload": "^12.2.13",
 		"ngclipboard": "^1.1.2",
 		"ngstorage": "^0.3.11",
