--- a/package.json
+++ b/package.json
@@ -49,15 +49,19 @@
 	"devDependencies": {
 		"@babel/core": "^7.0.0-beta.32",
 		"@babel/preset-env": "^7.0.0-beta.32",
+		"@types/faker": "^4.1.2",
 		"@types/jasmine": "^2.8.2",
 		"@types/jasminewd2": "^2.0.3",
+		"axios": "^0.17.1",
 		"babel-loader": "^8.0.0-beta.0",
 		"cross-env": "^5.1.0",
 		"css-loader": "^0.28.7",
 		"extract-text-webpack-plugin": "^3.0.1",
+		"faker": "^4.1.0",
 		"file-loader": "^1.1.5",
 		"html-webpack-plugin": "^2.30.1",
 		"jasmine": "^2.8.0",
+		"jasmine-spec-reporter": "^4.2.1",
 		"ng-annotate-loader": "^0.6.1",
 		"ng-annotate-patched": "git://github.com/nevcos/ng-annotate-patched.git#es6-class-support",
 		"npm-run-all": "^4.1.2",
