Refactored npm run targets.

--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
 	"name": "vpdb-website",
 	"version": "1.0.0",
-	"description": "",
+	"description": "The web application of https://vpdb.io.",
 	"main": "index.js",
 	"scripts": {
-		"prod": "cross-env CONFIG=prod ENV=prod webpack-dev-server --history-api-fallback --inline --progress",
-		"local": "cross-env CONFIG=local ENV=dev webpack-dev-server --history-api-fallback --inline --progress",
-		"localprod": "cross-env CONFIG=prod ENV=dev webpack-dev-server --history-api-fallback --inline --progress",
-		"test": "cross-env CONFIG=test ENV=test webpack-dev-server --history-api-fallback --inline --progress",
+		"serve:prod": "cross-env ENV=prod CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
+		"serve:dev:local": "cross-env ENV=dev CONFIG=local webpack-dev-server --history-api-fallback --inline --progress",
+		"serve:dev:prod": "cross-env ENV=dev CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
+		"serve:test": "cross-env ENV=test CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
+		"build:prod": "run-s build:clean build:prod:run",
+		"build:test": "run-s build:clean build:test:run",
+		"build:analyze": "run-s build:clean build:analyze:run",
+		"test:run": "run-s test:clean test:compile test:protractor",
+
 		"build:clean": "rimraf ./dist",
-		"build:run": "cross-env CONFIG=prod ENV=prod webpack --bail --progress --profile",
-		"build": "run-s build:clean build:run",
+		"build:prod:run": "cross-env CONFIG=prod ENV=prod webpack --bail --progress --profile",
+		"build:test:run": "cross-env CONFIG=test ENV=prod webpack --bail --progress --profile",
+		"build:analyze:run": "cross-env CONFIG=prod ENV=analyze webpack --bail --progress --profile",
 		"test:clean": "rimraf ./test",
 		"test:compile": "tsc",
-		"test:protractor": "protractor test/config/protractor.js",
-		"test:run": "run-s test:clean test:compile test:protractor"
+		"test:protractor": "cross-env CONFIG=test protractor test/config/protractor.js"
 	},
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPLv2",
