--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
 		"serve:prod": "cross-env ENV=prod CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:dev:local": "cross-env ENV=dev CONFIG=local webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:dev:prod": "cross-env ENV=dev CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
-		"serve:test": "cross-env ENV=test CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
+		"serve:test": "cross-env ENV=prod CONFIG=test webpack-dev-server --history-api-fallback --inline --progress",
+		"serve:saucelabs": "cross-env ENV=prod CONFIG=saucelabs webpack-dev-server --history-api-fallback --inline --progress",
 		"build:prod": "run-s build:clean build:prod:run",
 		"build:test": "run-s build:clean build:test:run",
 		"build:analyze": "run-s build:clean build:analyze:run",
-		"test:run": "run-s test:clean test:compile test:protractor",
+		"test:run:local": "run-s test:clean test:compile test:protractor:local",
+		"test:run:saucelabs": "run-s test:clean test:compile test:protractor:saucelabs",
 
 		"build:clean": "rimraf ./dist",
 		"build:prod:run": "cross-env CONFIG=prod ENV=prod webpack --bail --progress --profile",
@@ -19,7 +21,8 @@
 		"build:analyze:run": "cross-env CONFIG=prod ENV=analyze webpack --bail --progress --profile",
 		"test:clean": "rimraf ./test",
 		"test:compile": "tsc",
-		"test:protractor": "cross-env CONFIG=test protractor test/config/protractor.js"
+		"test:protractor:local": "cross-env CONFIG=test protractor test/config/protractor.local.js",
+		"test:protractor:saucelabs": "cross-env CONFIG=test protractor test/config/protractor.saucelabs.js"
 	},
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPLv2",
