--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"test:protractor:browserstack": "cross-env CONFIG=test protractor test/config/protractor.browserstack.js"
 	},
 	"author": "freezy <freezy@vpdb.io>",
-	"license": "GPLv2",
+	"license": "GPL-2.0",
 	"dependencies": {
 		"angular": "^1.6.6",
 		"angular-animate": "^1.6.6",
