Added repository to package.json.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "vpdb-website",
+	"repository": "vpdb/website",
 	"version": "1.0.0",
 	"description": "The web application of https://vpdb.io.",
 	"main": "index.js",
