Print URLs before tests.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "1.0.0",
 	"description": "The web application of https://vpdb.io.",
 	"main": "index.js",
-	"engines" : { "node" : ">=8.0" },
+	"engines" : { "node" : ">=8.0 <9.0" },
 	"scripts": {
 		"serve:prod": "cross-env ENV=prod CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:dev:local": "cross-env ENV=dev CONFIG=local webpack-dev-server --history-api-fallback --inline --progress",
@@ -13,20 +13,22 @@
 		"serve:saucelabs": "cross-env ENV=prod CONFIG=saucelabs webpack-dev-server --history-api-fallback --inline --progress",
 		"build:prod": "run-s build:clean build:prod:run",
 		"build:test": "run-s build:clean build:test:run",
+		"build:browserstack": "run-s build:clean build:browserstack:run",
 		"build:analyze": "run-s build:clean build:analyze:run",
 		"test:run:local": "run-s test:clean test:compile test:protractor:local",
 		"test:run:saucelabs": "run-s test:clean test:compile test:protractor:saucelabs",
 		"test:run:browserstack": "run-s test:clean test:compile test:protractor:browserstack",
 
 		"build:clean": "rimraf ./dist",
-		"build:prod:run": "cross-env CONFIG=prod ENV=prod webpack --bail --progress --profile",
-		"build:test:run": "cross-env CONFIG=test ENV=prod webpack --bail --progress --profile",
+		"build:prod:run": "cross-env ENV=prod CONFIG=prod webpack --bail --progress --profile",
+		"build:test:run": "cross-env ENV=prod CONFIG=test webpack --bail --progress --profile",
+		"build:browserstack:run": "cross-env ENV=prod CONFIG=browserstack webpack --bail --progress --profile",
 		"build:analyze:run": "cross-env CONFIG=prod ENV=analyze webpack --bail --progress --profile",
 		"test:clean": "rimraf ./test",
 		"test:compile": "tsc",
 		"test:protractor:local": "cross-env CONFIG=test protractor test/config/protractor.local.js",
 		"test:protractor:saucelabs": "cross-env CONFIG=test protractor test/config/protractor.saucelabs.js",
-		"test:protractor:browserstack": "cross-env CONFIG=test protractor test/config/protractor.browserstack.js"
+		"test:protractor:browserstack": "cross-env CONFIG=browserstack protractor test/config/protractor.browserstack.js"
 	},
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
