--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"test:run:local": "run-s test:clean test:compile test:protractor:local",
 		"test:run:saucelabs": "run-s test:clean test:compile test:protractor:saucelabs",
 		"test:run:browserstack": "run-s test:clean test:compile test:protractor:browserstack",
+		"selenium:init": "node_modules/.bin/webdriver-manager update",
+		"selenium": "node_modules/.bin/webdriver-manager start",
 
 		"build:clean": "rimraf ./dist",
 		"build:prod:run": "cross-env ENV=prod CONFIG=prod webpack --bail --progress --profile",
