--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
 	"version": "1.0.0",
 	"description": "The web application of https://vpdb.io.",
 	"main": "index.js",
-	"engines" : { "node" : ">=8.0 <9.0" },
 	"scripts": {
 		"serve:prod": "cross-env ENV=prod CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:dev:local": "cross-env ENV=dev CONFIG=local webpack-dev-server --history-api-fallback --inline --progress",
@@ -15,9 +14,9 @@
 		"build:test": "run-s build:clean build:test:run",
 		"build:browserstack": "run-s build:clean build:browserstack:run",
 		"build:analyze": "run-s build:clean build:analyze:run",
-		"test:run:local": "run-s test:clean test:compile test:protractor:local",
-		"test:run:saucelabs": "run-s test:clean test:compile test:protractor:saucelabs",
-		"test:run:browserstack": "run-s test:clean test:compile test:protractor:browserstack",
+		"test:local": "run-s test:clean test:compile test:protractor:local",
+		"test:saucelabs": "run-s test:clean test:compile test:protractor:saucelabs",
+		"test:browserstack": "run-s test:clean test:compile test:protractor:browserstack",
 		"selenium:init": "node_modules/.bin/webdriver-manager update",
 		"selenium": "node_modules/.bin/webdriver-manager start",
 
@@ -101,5 +100,8 @@
 		"webpack-dev-server": "^2.9.1",
 		"webpack-merge": "^4.1.0",
 		"webpack-sources": "1.0.1"
+	},
+	"engines" : {
+		"node" : ">=8.0 <9.0"
 	}
 }
