--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
 		"test:browserstack": "run-s test:clean test:compile test:protractor:browserstack",
 		"selenium:init": "node_modules/.bin/webdriver-manager update",
 		"selenium": "node_modules/.bin/webdriver-manager start",
-
 		"build:clean": "rimraf ./dist",
 		"build:prod:run": "cross-env ENV=prod CONFIG=prod webpack --bail --progress --profile",
 		"build:test:run": "cross-env ENV=prod CONFIG=test webpack --bail --progress --profile",
@@ -76,11 +75,12 @@
 		"file-loader": "^1.1.5",
 		"html-webpack-plugin": "^2.30.1",
 		"jasmine": "^2.8.0",
-		"jasmine-spec-reporter": "^4.2.1",
+		"jasmine-console-reporter": "^2.0.1",
 		"ng-annotate-loader": "^0.6.1",
 		"ng-annotate-patched": "git://github.com/nevcos/ng-annotate-patched.git#es6-class-support",
 		"npm-run-all": "^4.1.2",
 		"protractor": "^5.2.0",
+		"protractor-beautiful-reporter": "^0.5.3",
 		"pug": "^2.0.0-rc.4",
 		"pug-html-loader": "^1.1.5",
 		"pug-loader": "^2.3.0",
@@ -101,7 +101,7 @@
 		"webpack-merge": "^4.1.0",
 		"webpack-sources": "1.0.1"
 	},
-	"engines" : {
-		"node" : ">=8.0 <9.0"
+	"engines": {
+		"node": ">=8.0 <9.0"
 	}
 }
