--- a/package.json
+++ b/package.json
@@ -33,15 +33,15 @@
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
 	"dependencies": {
-		"angular": "^1.6.6",
-		"angular-animate": "^1.6.6",
+		"angular": "^1.6.7",
+		"angular-animate": "^1.6.7",
 		"angular-dragdrop": "^1.0.13",
 		"angular-elastic": "^2.5.1",
 		"angular-gravatar": "^0.4.2",
-		"angular-resource": "^1.6.6",
-		"angular-sanitize": "^1.6.6",
+		"angular-resource": "^1.6.7",
+		"angular-sanitize": "^1.6.7",
 		"angular-timeago": "^0.4.6",
-		"angular-touch": "^1.6.6",
+		"angular-touch": "^1.6.7",
 		"angular-ui-bootstrap": "^2.5.0",
 		"angular-ui-router": "^0.4.3",
 		"bootstrap": "^3.3.7",
@@ -90,16 +90,16 @@
 		"stylus-loader": "^3.0.1",
 		"svg-sprite-loader": "^3.4.0",
 		"svgo": "^1.0.3",
-		"svgo-loader": "^2.0.0",
+		"svgo-loader": "^2.1.0",
 		"ts-node": "^3.3.0",
-		"typescript": "^2.6.1",
-		"uglifyjs-webpack-plugin": "^1.0.0-rc.0",
+		"typescript": "^2.6.2",
+		"uglifyjs-webpack-plugin": "^1.1.2",
 		"url-loader": "^0.6.2",
-		"webpack": "^3.6.0",
+		"webpack": "^3.9.1",
 		"webpack-bundle-analyzer": "^2.9.1",
-		"webpack-dev-server": "^2.9.1",
+		"webpack-dev-server": "^2.9.5",
 		"webpack-merge": "^4.1.0",
-		"webpack-sources": "1.0.1"
+		"webpack-sources": "^1.1.0"
 	},
 	"engines": {
 		"node": ">=8.0 <9.0"
