chore(deps): Updated dependencies.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"selenium:init": "node_modules/.bin/webdriver-manager update",
 		"selenium": "node_modules/.bin/webdriver-manager start",
 		"build:clean": "rimraf ./dist",
-		"build:prod:run": "cross-env ENV=prod CONFIG=prod webpack --bail --progress --profile",
+		"build:prod:run": "cross-env ENV=prod CONFIG=prod webpack --bail --progress --profile --json > stats.json",
 		"build:test:run": "cross-env ENV=prod CONFIG=test webpack --bail --progress --profile",
 		"build:browserstack:run": "cross-env ENV=prod CONFIG=browserstack webpack --bail --progress --profile",
 		"build:analyze:run": "cross-env CONFIG=prod ENV=analyze webpack --bail --progress --profile",
@@ -56,9 +56,9 @@
 		"ngstorage": "^0.3.11",
 		"nib": "^1.1.2",
 		"parse-uri": "^1.0.0",
-		"showdown": "^1.8.2",
+		"showdown": "^1.8.4",
 		"traverse": "^0.6.6",
-		"video.js": "^6.2.8"
+		"video.js": "^6.4.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.0.0-beta.32",
@@ -79,8 +79,8 @@
 		"ng-annotate-loader": "^0.6.1",
 		"ng-annotate-patched": "git://github.com/nevcos/ng-annotate-patched.git#es6-class-support",
 		"npm-run-all": "^4.1.2",
-		"protractor": "^5.2.0",
-		"protractor-beautiful-reporter": "^0.5.3",
+		"protractor": "^5.2.1",
+		"protractor-beautiful-reporter": "^0.5.6",
 		"pug": "^2.0.0-rc.4",
 		"pug-html-loader": "^1.1.5",
 		"pug-loader": "^2.3.0",
@@ -88,16 +88,16 @@
 		"style-loader": "^0.19.0",
 		"stylus": "^0.54.5",
 		"stylus-loader": "^3.0.1",
-		"svg-sprite-loader": "^3.4.0",
+		"svg-sprite-loader": "^3.5.1",
 		"svgo": "^1.0.3",
 		"svgo-loader": "^2.1.0",
 		"ts-node": "^3.3.0",
 		"typescript": "^2.6.2",
 		"uglifyjs-webpack-plugin": "^1.1.2",
 		"url-loader": "^0.6.2",
-		"webpack": "^3.9.1",
+		"webpack": "^3.10.0",
 		"webpack-bundle-analyzer": "^2.9.1",
-		"webpack-dev-server": "^2.9.5",
+		"webpack-dev-server": "^2.9.7",
 		"webpack-merge": "^4.1.0",
 		"webpack-sources": "^1.1.0"
 	},
