--- a/package.json
+++ b/package.json
@@ -63,9 +63,13 @@
 	"devDependencies": {
 		"@babel/core": "^7.0.0-beta.32",
 		"@babel/preset-env": "^7.0.0-beta.32",
+		"@types/axios": "^0.14.0",
 		"@types/faker": "^4.1.2",
 		"@types/jasmine": "^2.8.2",
 		"@types/jasminewd2": "^2.0.3",
+		"@types/pleasejs": "0.0.27",
+		"@types/pngjs": "^3.3.0",
+		"@types/stream-to-array": "^2.3.0",
 		"axios": "^0.17.1",
 		"babel-loader": "^8.0.0-beta.0",
 		"cross-env": "^5.1.0",
@@ -79,12 +83,15 @@
 		"ng-annotate-loader": "^0.6.1",
 		"ng-annotate-patched": "git://github.com/nevcos/ng-annotate-patched.git#es6-class-support",
 		"npm-run-all": "^4.1.2",
+		"pleasejs": "^0.4.2",
+		"pngjs": "^3.3.1",
 		"protractor": "^5.2.1",
 		"protractor-beautiful-reporter": "^0.5.6",
 		"pug": "^2.0.0-rc.4",
 		"pug-html-loader": "^1.1.5",
 		"pug-loader": "^2.3.0",
 		"raw-loader": "^0.5.1",
+		"stream-to-array": "^2.3.0",
 		"style-loader": "^0.19.0",
 		"stylus": "^0.54.5",
 		"stylus-loader": "^3.0.1",
