--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
 	"dependencies": {
+		"@uirouter/angularjs": "^1.0.11",
 		"angular": "^1.6.7",
 		"angular-animate": "^1.6.7",
 		"angular-dragdrop": "^1.0.13",
@@ -42,8 +43,7 @@
 		"angular-sanitize": "^1.6.7",
 		"angular-timeago": "^0.4.6",
 		"angular-touch": "^1.6.7",
-		"angular-ui-bootstrap": "^2.5.0",
-		"angular-ui-router": "^0.4.3",
+		"angular-ui-bootstrap": "^2.5.6",
 		"bootstrap": "^3.3.7",
 		"jquery": "^3.2.1",
 		"jquery-ui": "^1.12.1",
@@ -56,7 +56,7 @@
 		"ngstorage": "^0.3.11",
 		"nib": "^1.1.2",
 		"parse-uri": "^1.0.0",
-		"showdown": "^1.8.4",
+		"showdown": "^1.8.5",
 		"traverse": "^0.6.6",
 		"video.js": "^6.4.0"
 	},
@@ -75,7 +75,7 @@
 		"css-loader": "^0.28.7",
 		"extract-text-webpack-plugin": "^3.0.1",
 		"faker": "^4.1.0",
-		"file-loader": "^1.1.5",
+		"file-loader": "^1.1.6",
 		"html-webpack-plugin": "^2.30.1",
 		"jasmine": "^2.8.0",
 		"jasmine-console-reporter": "^2.0.1",
@@ -84,22 +84,22 @@
 		"npm-run-all": "^4.1.2",
 		"pleasejs": "^0.4.2",
 		"pngjs": "^3.3.1",
-		"protractor": "^5.2.1",
+		"protractor": "^5.2.2",
 		"protractor-beautiful-reporter": "^0.5.6",
 		"pug": "^2.0.0-rc.4",
 		"pug-html-loader": "^1.1.5",
 		"pug-loader": "^2.3.0",
 		"raw-loader": "^0.5.1",
 		"stream-to-array": "^2.3.0",
-		"style-loader": "^0.19.0",
+		"style-loader": "^0.19.1",
 		"stylus": "^0.54.5",
 		"stylus-loader": "^3.0.1",
-		"svg-sprite-loader": "^3.5.1",
+		"svg-sprite-loader": "^3.5.4",
 		"svgo": "^1.0.3",
 		"svgo-loader": "^2.1.0",
-		"ts-node": "^3.3.0",
+		"ts-node": "^4.0.2",
 		"typescript": "^2.6.2",
-		"uglifyjs-webpack-plugin": "^1.1.2",
+		"uglifyjs-webpack-plugin": "^1.1.4",
 		"url-loader": "^0.6.2",
 		"webpack": "^3.10.0",
 		"webpack-bundle-analyzer": "^2.9.1",
