test: Get rid of SauceLabs config.

--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
 		"serve:dev:local": "cross-env ENV=dev CONFIG=local webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:dev:prod": "cross-env ENV=dev CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:test": "cross-env ENV=prod CONFIG=test webpack-dev-server --history-api-fallback --inline --progress",
-		"serve:saucelabs": "cross-env ENV=prod CONFIG=saucelabs webpack-dev-server --history-api-fallback --inline --progress",
 		"build:prod": "run-s build:clean build:prod:run",
 		"build:test": "run-s build:clean build:test:run",
 		"build:browserstack": "run-s build:clean build:browserstack:run",
 		"build:analyze": "run-s build:clean build:analyze:run",
 		"test:local": "run-s test:clean test:compile test:protractor:local",
-		"test:saucelabs": "run-s test:clean test:compile test:protractor:saucelabs",
 		"test:browserstack": "run-s test:clean test:compile test:protractor:browserstack",
 		"selenium:init": "node_modules/.bin/webdriver-manager update",
 		"selenium": "node_modules/.bin/webdriver-manager start",
@@ -27,8 +25,8 @@
 		"test:clean": "rimraf ./test ./report",
 		"test:compile": "tsc",
 		"test:protractor:local": "cross-env CONFIG=test protractor test/config/protractor.local.js",
-		"test:protractor:saucelabs": "cross-env CONFIG=test protractor test/config/protractor.saucelabs.js",
-		"test:protractor:browserstack": "cross-env CONFIG=browserstack protractor test/config/protractor.browserstack.js"
+		"test:protractor:browserstack": "cross-env CONFIG=browserstack protractor test/config/protractor.browserstack.js",
+		"postinstall": "npm run selenium:init"
 	},
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
