--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"test:browserstack": "run-s test:clean test:compile test:protractor:browserstack",
 		"selenium:init": "node_modules/.bin/webdriver-manager update",
 		"selenium": "node_modules/.bin/webdriver-manager start",
+		"selenium:edge": "MicrosoftWebDriver",
 		"build:clean": "rimraf ./dist",
 		"build:prod:run": "cross-env ENV=prod CONFIG=prod webpack --bail --progress --profile --json > stats.json",
 		"build:test:run": "cross-env ENV=prod CONFIG=test webpack --bail --progress --profile",
@@ -31,16 +32,16 @@
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
 	"dependencies": {
-		"@uirouter/angularjs": "^1.0.11",
-		"angular": "^1.6.7",
-		"angular-animate": "^1.6.7",
+		"@uirouter/angularjs": "^1.0.12",
+		"angular": "^1.6.8",
+		"angular-animate": "^1.6.8",
 		"angular-dragdrop": "^1.0.13",
 		"angular-elastic": "^2.5.1",
 		"angular-gravatar": "^0.4.2",
-		"angular-resource": "^1.6.7",
-		"angular-sanitize": "^1.6.7",
+		"angular-resource": "^1.6.8",
+		"angular-sanitize": "^1.6.8",
 		"angular-timeago": "^0.4.6",
-		"angular-touch": "^1.6.7",
+		"angular-touch": "^1.6.8",
 		"angular-ui-bootstrap": "^2.5.6",
 		"bootstrap": "^3.3.7",
 		"jquery": "^3.2.1",
@@ -54,7 +55,7 @@
 		"ngstorage": "^0.3.11",
 		"nib": "^1.1.2",
 		"parse-uri": "^1.0.0",
-		"showdown": "^1.8.5",
+		"showdown": "^1.8.6",
 		"traverse": "^0.6.6",
 		"video.js": "^6.4.0"
 	},
@@ -69,7 +70,7 @@
 		"@types/stream-to-array": "^2.3.0",
 		"axios": "^0.17.1",
 		"babel-loader": "^8.0.0-beta.0",
-		"cross-env": "^5.1.0",
+		"cross-env": "^5.1.3",
 		"css-loader": "^0.28.7",
 		"extract-text-webpack-plugin": "^3.0.1",
 		"faker": "^4.1.0",
@@ -92,10 +93,10 @@
 		"style-loader": "^0.19.1",
 		"stylus": "^0.54.5",
 		"stylus-loader": "^3.0.1",
-		"svg-sprite-loader": "^3.5.4",
+		"svg-sprite-loader": "^3.6.0",
 		"svgo": "^1.0.3",
 		"svgo-loader": "^2.1.0",
-		"ts-node": "^4.0.2",
+		"ts-node": "^4.1.0",
 		"typescript": "^2.6.2",
 		"uglifyjs-webpack-plugin": "^1.1.4",
 		"url-loader": "^0.6.2",
