--- a/package.json
+++ b/package.json
@@ -66,12 +66,14 @@
 		"@types/faker": "^4.1.2",
 		"@types/jasmine": "^2.8.3",
 		"@types/jasminewd2": "^2.0.3",
+		"@types/lodash": "^4.14.91",
 		"@types/pngjs": "^3.3.0",
 		"@types/stream-to-array": "^2.3.0",
 		"axios": "^0.17.1",
 		"babel-loader": "^8.0.0-beta.0",
 		"cross-env": "^5.1.3",
 		"css-loader": "^0.28.7",
+		"eslint": "^4.14.0",
 		"extract-text-webpack-plugin": "^3.0.1",
 		"faker": "^4.1.0",
 		"file-loader": "^1.1.6",
