chore: Enable ESLint in tests.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
 		"build:test": "run-s build:clean build:test:run",
 		"build:browserstack": "run-s build:clean build:browserstack:run",
 		"build:analyze": "run-s build:clean build:analyze:run",
-		"test:local": "run-s test:clean test:compile test:protractor:local",
-		"test:browserstack": "run-s test:clean test:compile test:protractor:browserstack",
+		"lint": "eslint src/**/*.js",
+		"test:local": "run-s lint test:clean test:compile test:protractor:local",
+		"test:browserstack": "run-s lint test:clean test:compile test:protractor:browserstack",
 		"selenium:init": "node_modules/.bin/webdriver-manager update",
 		"selenium": "node_modules/.bin/webdriver-manager start",
 		"selenium:edge": "MicrosoftWebDriver",
