--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"serve:prod": "cross-env ENV=prod CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:dev:local": "cross-env ENV=dev CONFIG=local webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:dev:prod": "cross-env ENV=dev CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
+		"serve:dev:test": "cross-env ENV=dev CONFIG=test webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:test": "cross-env ENV=prod CONFIG=test webpack-dev-server --history-api-fallback --inline --progress",
 		"build:prod": "run-s build:clean build:prod:run",
 		"build:test": "run-s build:clean build:test:run",
