--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,8 @@
 {
-  "extends": [
-    "config:base",
-    ":semanticCommits",
-    ":semanticCommitTypeAll(chore)"
-  ]
+	"extends": [
+		"config:base",
+		":semanticCommits",
+		":semanticCommitTypeAll(chore)",
+		"schedule:earlyMondays"
+	]
 }
