--- a/package.json
+++ b/package.json
@@ -34,22 +34,22 @@
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
 	"dependencies": {
-		"@uirouter/angularjs": "^1.0.12",
-		"angular": "^1.6.8",
-		"angular-animate": "^1.6.8",
+		"@uirouter/angularjs": "^1.0.15",
+		"angular": "^1.6.9",
+		"angular-animate": "^1.6.9",
 		"angular-dragdrop": "^1.0.13",
 		"angular-elastic": "^2.5.1",
 		"angular-gravatar": "^0.4.2",
-		"angular-resource": "^1.6.8",
-		"angular-sanitize": "^1.6.8",
+		"angular-resource": "^1.6.9",
+		"angular-sanitize": "^1.6.9",
 		"angular-timeago": "^0.4.6",
-		"angular-touch": "^1.6.8",
+		"angular-touch": "^1.6.9",
 		"angular-ui-bootstrap": "^2.5.6",
 		"bootstrap": "^3.3.7",
-		"jquery": "^3.2.1",
+		"jquery": "^3.3.1",
 		"jquery-ui": "^1.12.1",
-		"jquery.waitforimages": "^2.2.0",
-		"lodash": "^4.17.4",
+		"jquery.waitforimages": "^2.4.0",
+		"lodash": "^4.17.5",
 		"magnific-popup": "^1.1.0",
 		"ment.io": "^0.9.23",
 		"ng-file-upload": "^12.2.13",
@@ -59,7 +59,7 @@
 		"parse-uri": "^1.0.0",
 		"showdown": "^1.8.6",
 		"traverse": "^0.6.6",
-		"video.js": "^6.6.0"
+		"video.js": "^6.6.3"
 	},
 	"devDependencies": {
 		"@babel/core": "7.0.0-beta.40",
@@ -68,17 +68,17 @@
 		"@types/faker": "4.1.2",
 		"@types/jasmine": "2.8.6",
 		"@types/jasminewd2": "2.0.3",
-		"@types/lodash": "4.14.103",
+		"@types/lodash": "^4.14.104",
 		"@types/pngjs": "3.3.0",
 		"@types/stream-to-array": "2.3.0",
-		"axios": "0.17.1",
+		"axios": "^0.18.0",
 		"babel-loader": "8.0.0-beta.0",
 		"cross-env": "5.1.3",
 		"css-loader": "0.28.9",
-		"eslint": "4.17.0",
+		"eslint": "^4.18.0",
 		"extract-text-webpack-plugin": "3.0.2",
 		"faker": "4.1.0",
-		"file-loader": "1.1.6",
+		"file-loader": "^1.1.7",
 		"html-webpack-plugin": "2.30.1",
 		"jasmine": "2.99.0",
 		"jasmine-console-reporter": "2.0.1",
@@ -102,9 +102,9 @@
 		"svgo-loader": "2.1.0",
 		"ts-node": "4.1.0",
 		"typescript": "2.7.2",
-		"uglifyjs-webpack-plugin": "1.1.8",
+		"uglifyjs-webpack-plugin": "^1.2.0",
 		"url-loader": "0.6.2",
-		"webpack": "3.10.0",
+		"webpack": "^3.11.0",
 		"webpack-bundle-analyzer": "2.10.0",
 		"webpack-dev-server": "2.11.1",
 		"webpack-merge": "4.1.1",
