--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
 		"svg-sprite-loader": "3.6.2",
 		"svgo": "1.0.4",
 		"svgo-loader": "2.1.0",
+		"sw-precache-webpack-plugin": "^0.11.4",
 		"ts-node": "4.1.0",
 		"typescript": "2.7.2",
 		"uglifyjs-webpack-plugin": "^1.2.0",
