--- a/package.json
+++ b/package.json
@@ -100,7 +100,6 @@
 		"svg-sprite-loader": "3.6.2",
 		"svgo": "1.0.4",
 		"svgo-loader": "2.1.0",
-		"sw-precache-webpack-plugin": "^0.11.4",
 		"ts-node": "4.1.0",
 		"typescript": "2.7.2",
 		"uglifyjs-webpack-plugin": "^1.2.0",
@@ -109,7 +108,8 @@
 		"webpack-bundle-analyzer": "2.10.0",
 		"webpack-dev-server": "2.11.1",
 		"webpack-merge": "4.1.1",
-		"webpack-sources": "1.1.0"
+		"webpack-sources": "1.1.0",
+		"workbox-webpack-plugin": "^2.1.2"
 	},
 	"engines": {
 		"node": ">=8.0 <9.0"
