--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
 		"parse-uri": "^1.0.0",
 		"showdown": "^1.8.6",
 		"traverse": "^0.6.6",
-		"video.js": "^6.6.3"
+		"video.js": "^6.7.3"
 	},
 	"devDependencies": {
 		"@babel/core": "7.0.0-beta.40",
@@ -73,13 +73,13 @@
 		"@types/stream-to-array": "2.3.0",
 		"axios": "0.18.0",
 		"babel-loader": "8.0.0-beta.0",
-		"cross-env": "5.1.3",
-		"css-loader": "0.28.9",
-		"eslint": "4.18.1",
-		"extract-text-webpack-plugin": "3.0.2",
+		"cross-env": "^5.1.4",
+		"css-loader": "^0.28.10",
+		"eslint": "^4.18.2",
+		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"faker": "4.1.0",
-		"file-loader": "1.1.10",
-		"html-webpack-plugin": "2.30.1",
+		"file-loader": "^1.1.11",
+		"html-webpack-plugin": "^3.0.6",
 		"jasmine": "2.99.0",
 		"jasmine-console-reporter": "2.0.1",
 		"ng-annotate-loader": "0.6.1",
@@ -89,27 +89,28 @@
 		"pngjs": "3.3.2",
 		"protractor": "5.3.0",
 		"protractor-beautiful-reporter": "0.5.8",
-		"pug": "2.0.0-rc.4",
+		"pug": "^2.0.1",
 		"pug-html-loader": "1.1.5",
-		"pug-loader": "2.3.0",
+		"pug-loader": "https://github.com/pugjs/pug-loader/tarball/master",
 		"raw-loader": "0.5.1",
 		"stream-to-array": "2.3.0",
-		"style-loader": "0.20.2",
+		"style-loader": "^0.20.3",
 		"stylus": "0.54.5",
-		"stylus-loader": "3.0.1",
-		"svg-sprite-loader": "3.6.2",
-		"svgo": "1.0.4",
+		"stylus-loader": "^3.0.2",
+		"svg-sprite-loader": "^3.7.0",
+		"svgo": "^1.0.5",
 		"svgo-loader": "2.1.0",
-		"ts-node": "5.0.0",
+		"ts-node": "^5.0.1",
 		"typescript": "2.7.2",
-		"uglifyjs-webpack-plugin": "1.2.2",
-		"url-loader": "0.6.2",
-		"webpack": "3.11.0",
-		"webpack-bundle-analyzer": "2.10.0",
-		"webpack-dev-server": "2.11.1",
-		"webpack-merge": "4.1.1",
+		"uglifyjs-webpack-plugin": "^1.2.3",
+		"url-loader": "^1.0.1",
+		"webpack": "^4.1.1",
+		"webpack-bundle-analyzer": "^2.11.1",
+		"webpack-cli": "^2.0.11",
+		"webpack-dev-server": "^3.1.1",
+		"webpack-merge": "^4.1.2",
 		"webpack-sources": "1.1.0",
-		"workbox-webpack-plugin": "2.1.2"
+		"workbox-webpack-plugin": "^2.1.3"
 	},
 	"engines": {
 		"node": ">=8.0 <9.0"
