--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"ngclipboard": "^1.1.2",
 		"ngstorage": "^0.3.11",
 		"nib": "^1.1.2",
+		"oclazyload": "^1.1.0",
 		"parse-uri": "^1.0.0",
 		"showdown": "^1.8.6",
 		"traverse": "^0.6.6",
@@ -63,6 +64,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "7.0.0-beta.40",
+		"@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.40",
 		"@babel/preset-env": "7.0.0-beta.40",
 		"@types/axios": "0.14.0",
 		"@types/faker": "4.1.2",
@@ -72,11 +74,13 @@
 		"@types/pngjs": "3.3.0",
 		"@types/stream-to-array": "2.3.0",
 		"axios": "0.18.0",
+		"babel-eslint": "^8.2.2",
 		"babel-loader": "8.0.0-beta.0",
 		"cross-env": "^5.1.4",
 		"css-loader": "^0.28.10",
 		"eslint": "^4.18.2",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
+		"babel-plugin-syntax-dynamic-import": "^6.18.0",
 		"faker": "4.1.0",
 		"file-loader": "^1.1.11",
 		"html-webpack-plugin": "^3.0.6",
