--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
 		"@types/lodash": "4.14.104",
 		"@types/pngjs": "3.3.0",
 		"@types/stream-to-array": "2.3.0",
+		"autoprefixer": "^8.1.0",
 		"axios": "0.18.0",
 		"babel-eslint": "^8.2.2",
 		"babel-loader": "8.0.0-beta.0",
@@ -84,11 +85,14 @@
 		"html-webpack-plugin": "^3.0.6",
 		"jasmine": "2.99.0",
 		"jasmine-console-reporter": "2.0.1",
+		"less": "^3.0.1",
+		"less-loader": "^4.1.0",
 		"ng-annotate-loader": "0.6.1",
 		"ng-annotate-patched": "git://github.com/nevcos/ng-annotate-patched.git#es6-class-support",
 		"npm-run-all": "4.1.2",
 		"pleasejs": "0.4.2",
 		"pngjs": "3.3.2",
+		"postcss-loader": "^2.1.1",
 		"protractor": "5.3.0",
 		"protractor-beautiful-reporter": "0.5.8",
 		"pug": "^2.0.1",
