--- a/package.json
+++ b/package.json
@@ -10,23 +10,17 @@
 		"serve:dev:prod": "cross-env ENV=dev CONFIG=prod webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:dev:test": "cross-env ENV=dev CONFIG=test webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:test": "cross-env ENV=prod CONFIG=test webpack-dev-server --history-api-fallback --inline --progress",
-		"build:prod": "run-s build:clean build:prod:run",
-		"build:local": "run-s build:clean build:local:run",
-		"build:test": "run-s build:clean build:test:run",
-		"build:browserstack": "run-s build:clean build:browserstack:run",
-		"build:analyze": "run-s build:clean build:analyze:run",
+		"build:prod": "cross-env ENV=prod CONFIG=prod webpack --bail --progress --profile --json > stats.json",
+		"build:local": "cross-env ENV=prod CONFIG=local webpack --bail --progress --profile",
+		"build:test": "cross-env ENV=prod CONFIG=test webpack --bail --progress --profile",
+		"build:browserstack": "cross-env ENV=prod CONFIG=browserstack webpack --bail --progress --profile",
+		"build:analyze": "cross-env CONFIG=prod ENV=analyze webpack --bail --progress --profile",
 		"lint": "eslint src/**/*.js",
 		"test:local": "run-s lint test:clean test:compile test:protractor:local",
 		"test:browserstack": "run-s lint test:clean test:compile test:protractor:browserstack",
 		"selenium:init": "node_modules/.bin/webdriver-manager update",
 		"selenium": "node_modules/.bin/webdriver-manager start",
 		"selenium:edge": "MicrosoftWebDriver",
-		"build:clean": "rimraf ./dist",
-		"build:prod:run": "cross-env ENV=prod CONFIG=prod webpack --bail --progress --profile --json > stats.json",
-		"build:local:run": "cross-env ENV=prod CONFIG=local webpack --bail --progress --profile --json > stats.json",
-		"build:test:run": "cross-env ENV=prod CONFIG=test webpack --bail --progress --profile",
-		"build:browserstack:run": "cross-env ENV=prod CONFIG=browserstack webpack --bail --progress --profile",
-		"build:analyze:run": "cross-env CONFIG=prod ENV=analyze webpack --bail --progress --profile",
 		"test:clean": "rimraf ./test ./report",
 		"test:compile": "tsc",
 		"test:protractor:local": "cross-env CONFIG=test protractor test/config/protractor.local.js",
@@ -78,6 +72,7 @@
 		"axios": "0.18.0",
 		"babel-eslint": "^8.2.2",
 		"babel-loader": "8.0.0-beta.0",
+		"clean-webpack-plugin": "^0.1.19",
 		"cross-env": "^5.1.4",
 		"css-loader": "^0.28.10",
 		"eslint": "^4.18.2",
@@ -117,8 +112,8 @@
 		"webpack-cli": "^2.0.12",
 		"webpack-dev-server": "^3.1.1",
 		"webpack-merge": "^4.1.2",
-		"webpack-sources": "1.1.0",
-		"workbox-webpack-plugin": "^2.1.3"
+		"webpack-sources": "^1.1.0",
+		"workbox-webpack-plugin": "^3.0.0"
 	},
 	"engines": {
 		"node": ">=8.0 <9.0"
