feat: Add loading spinner until app is bootstrapped.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"serve:dev:test": "cross-env ENV=dev CONFIG=test webpack-dev-server --history-api-fallback --inline --progress",
 		"serve:test": "cross-env ENV=prod CONFIG=test webpack-dev-server --history-api-fallback --inline --progress",
 		"build:prod": "run-s build:clean build:prod:run",
+		"build:local": "run-s build:clean build:local:run",
 		"build:test": "run-s build:clean build:test:run",
 		"build:browserstack": "run-s build:clean build:browserstack:run",
 		"build:analyze": "run-s build:clean build:analyze:run",
@@ -22,6 +23,7 @@
 		"selenium:edge": "MicrosoftWebDriver",
 		"build:clean": "rimraf ./dist",
 		"build:prod:run": "cross-env ENV=prod CONFIG=prod webpack --bail --progress --profile --json > stats.json",
+		"build:local:run": "cross-env ENV=prod CONFIG=local webpack --bail --progress --profile --json > stats.json",
 		"build:test:run": "cross-env ENV=prod CONFIG=test webpack --bail --progress --profile",
 		"build:browserstack:run": "cross-env ENV=prod CONFIG=browserstack webpack --bail --progress --profile",
 		"build:analyze:run": "cross-env CONFIG=prod ENV=analyze webpack --bail --progress --profile",
