--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"angular-touch": "^1.6.9",
 		"angular-ui-bootstrap": "^2.5.6",
 		"bootstrap": "^3.3.7",
+		"fg-loadcss": "^2.0.1",
 		"jquery": "^3.3.1",
 		"jquery-ui": "^1.12.1",
 		"jquery.waitforimages": "^2.4.0",
