--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
 		"pleasejs": "0.4.2",
 		"pngjs": "3.3.2",
 		"postcss-loader": "2.1.1",
+		"preload-webpack-plugin": "^3.0.0-alpha.1",
 		"protractor": "5.3.0",
 		"protractor-beautiful-reporter": "0.5.8",
 		"pug": "2.0.1",
