--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"axios": "0.18.0",
 		"babel-eslint": "8.2.2",
 		"babel-loader": "8.0.0-beta.2",
+		"babel-plugin-lodash": "3.3.2",
 		"cross-env": "5.1.4",
 		"css-loader": "0.28.11",
 		"eslint": "4.19.1",
@@ -89,6 +90,7 @@
 		"jasmine-console-reporter": "2.0.1",
 		"less": "3.0.1",
 		"less-loader": "4.1.0",
+		"lodash-webpack-plugin": "0.11.4",
 		"ng-annotate-loader": "0.6.1",
 		"ng-annotate-patched": "git://github.com/nevcos/ng-annotate-patched.git#es6-class-support",
 		"nib": "^1.1.2",
