--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
 	"dependencies": {
+		"@shopify/draggable": "^1.0.0-beta.6",
 		"@uirouter/angularjs": "^1.0.15",
 		"angular": "^1.6.9",
 		"angular-animate": "^1.6.9",
-		"angular-dragdrop": "^1.0.13",
 		"angular-elastic": "^2.5.1",
 		"angular-gravatar": "^0.4.2",
 		"angular-resource": "^1.6.9",
@@ -49,9 +49,6 @@
 		"angular-ui-bootstrap": "^2.5.6",
 		"bootstrap": "^3.3.7",
 		"fg-loadcss": "^2.0.1",
-		"jquery": "^3.3.1",
-		"jquery-ui": "^1.12.1",
-		"jquery.waitforimages": "^2.4.0",
 		"lodash": "^4.17.5",
 		"magnific-popup": "^1.1.0",
 		"ment.io": "^0.9.23",
