--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"bootstrap": "^3.3.7",
 		"draggabilly": "^2.2.0",
 		"fg-loadcss": "^2.0.1",
+		"imagesloaded": "^4.1.4",
 		"lodash": "^4.17.5",
 		"magnific-popup": "^1.1.0",
 		"ment.io": "^0.9.23",
