--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@uirouter/angularjs": "^1.0.15",
 		"angular": "^1.6.9",
 		"angular-animate": "^1.6.9",
+		"angular-bootstrap-lightbox": "^0.12.0",
 		"angular-elastic": "^2.5.1",
 		"angular-gravatar": "^0.4.2",
 		"angular-resource": "^1.6.9",
@@ -55,7 +56,6 @@
 		"ment.io": "^0.9.23",
 		"ng-file-upload": "^12.2.13",
 		"ngclipboard": "^2.0.0",
-		"ngdraggable": "github:fatlinesofcode/ngDraggable",
 		"ngstorage": "^0.3.11",
 		"oclazyload": "^1.1.0",
 		"parse-uri": "^1.0.0",
