--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"build:browserstack": "run-s build:clean build:browserstack:run",
 		"build:analyze": "run-s build:clean build:analyze:run",
 		"lint": "eslint src/**/*.js",
-		"test:local": "run-s lint test:clean test:compile test:protractor:local",
+		"test:local": "run-s test:compile test:protractor:local",
 		"test:browserstack": "run-s lint test:clean test:compile test:protractor:browserstack",
 		"selenium:init": "node_modules/.bin/webdriver-manager update",
 		"selenium": "node_modules/.bin/webdriver-manager start",
@@ -71,7 +71,7 @@
 		"@types/jasmine": "2.8.6",
 		"@types/jasminewd2": "2.0.3",
 		"@types/lodash": "4.14.106",
-		"@types/pngjs": "3.3.0",
+		"@types/pngjs": "3.3.1",
 		"@types/stream-to-array": "2.3.0",
 		"autoprefixer": "8.2.0",
 		"axios": "0.18.0",
@@ -115,10 +115,10 @@
 		"typescript": "2.8.1",
 		"uglifyjs-webpack-plugin": "1.2.4",
 		"url-loader": "1.0.1",
-		"webpack": "4.4.1",
+		"webpack": "4.5.0",
 		"webpack-bundle-analyzer": "2.11.1",
-		"webpack-cli": "2.0.13",
-		"webpack-dev-server": "3.1.1",
+		"webpack-cli": "2.0.14",
+		"webpack-dev-server": "3.1.3",
 		"webpack-merge": "4.1.2",
 		"webpack-sources": "1.1.0",
 		"workbox-webpack-plugin": "2.1.3"
