--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"build:browserstack": "run-s build:clean build:browserstack:run",
 		"build:analyze": "run-s build:clean build:analyze:run",
 		"lint": "eslint src/**/*.js",
-		"test:local": "run-s test:compile test:protractor:local",
+		"test:local": "run-s lint test:clean test:compile test:protractor:local",
 		"test:browserstack": "run-s lint test:clean test:compile test:protractor:browserstack",
 		"selenium:init": "node_modules/.bin/webdriver-manager update",
 		"selenium": "node_modules/.bin/webdriver-manager start",
@@ -84,9 +84,9 @@
 		"extract-text-webpack-plugin": "4.0.0-beta.0",
 		"faker": "4.1.0",
 		"file-loader": "1.1.11",
-		"html-webpack-plugin": "3.1.0",
-		"jasmine": "2.99.0",
-		"jasmine-console-reporter": "2.0.1",
+		"html-webpack-plugin": "3.2.0",
+		"jasmine": "3.1.0",
+		"jasmine-console-reporter": "3.0.0",
 		"less": "3.0.1",
 		"less-loader": "4.1.0",
 		"lodash-webpack-plugin": "0.11.4",
@@ -98,8 +98,8 @@
 		"pngjs": "3.3.2",
 		"postcss-loader": "2.1.3",
 		"preload-webpack-plugin": "^3.0.0-alpha.1",
-		"protractor": "5.3.0",
-		"protractor-beautiful-reporter": "0.5.8",
+		"protractor": "5.3.1",
+		"protractor-beautiful-reporter": "1.2.1",
 		"pug": "2.0.3",
 		"pug-html-loader": "1.1.5",
 		"pug-loader": "https://github.com/pugjs/pug-loader/tarball/master",
@@ -133,7 +133,7 @@
 		},
 		{
 			"path": "./dist/vendor.bundle-*.js",
-			"maxSize": "200 kB"
+			"maxSize": "150 kB"
 		},
 		{
 			"path": "./dist/vendors*.js",
