--- a/package.json
+++ b/package.json
@@ -36,32 +36,32 @@
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
 	"dependencies": {
-		"@uirouter/angularjs": "^1.0.15",
-		"angular": "^1.6.9",
-		"angular-animate": "^1.6.9",
-		"angular-bootstrap-lightbox": "^0.12.0",
-		"angular-elastic": "^2.5.1",
-		"angular-gravatar": "^0.4.2",
-		"angular-resource": "^1.6.9",
-		"angular-sanitize": "^1.6.9",
-		"angular-timeago": "^0.4.6",
-		"angular-touch": "^1.6.9",
-		"angular-ui-bootstrap": "^2.5.6",
-		"bootstrap": "^3.3.7",
-		"draggabilly": "^2.2.0",
-		"fg-loadcss": "^2.0.1",
-		"imagesloaded": "^4.1.4",
-		"lodash": "^4.17.5",
-		"magnific-popup": "^1.1.0",
-		"ment.io": "^0.9.23",
-		"ng-file-upload": "^12.2.13",
-		"ngclipboard": "^2.0.0",
-		"ngstorage": "^0.3.11",
-		"oclazyload": "^1.1.0",
-		"parse-uri": "^1.0.0",
-		"showdown": "^1.8.6",
-		"traverse": "^0.6.6",
-		"video.js": "^6.7.3"
+		"@uirouter/angularjs": "1.0.15",
+		"angular": "1.6.9",
+		"angular-animate": "1.6.9",
+		"angular-bootstrap-lightbox": "0.12.0",
+		"angular-elastic": "2.5.1",
+		"angular-gravatar": "0.4.2",
+		"angular-resource": "1.6.9",
+		"angular-sanitize": "1.6.9",
+		"angular-timeago": "0.4.6",
+		"angular-touch": "1.6.9",
+		"angular-ui-bootstrap": "2.5.6",
+		"bootstrap": "3.3.7",
+		"draggabilly": "2.2.0",
+		"fg-loadcss": "2.0.1",
+		"imagesloaded": "4.1.4",
+		"lodash": "4.17.5",
+		"magnific-popup": "1.1.0",
+		"ment.io": "0.9.23",
+		"ng-file-upload": "12.2.13",
+		"ngclipboard": "2.0.0",
+		"ngstorage": "0.3.11",
+		"oclazyload": "1.1.0",
+		"parse-uri": "1.0.0",
+		"showdown": "1.8.6",
+		"traverse": "0.6.6",
+		"video.js": "6.7.3"
 	},
 	"devDependencies": {
 		"@babel/core": "7.0.0-beta.42",
@@ -75,7 +75,7 @@
 		"@types/stream-to-array": "2.3.0",
 		"autoprefixer": "8.2.0",
 		"axios": "0.18.0",
-		"babel-eslint": "8.2.2",
+		"babel-eslint": "8.2.3",
 		"babel-loader": "8.0.0-beta.2",
 		"babel-plugin-lodash": "3.3.2",
 		"cross-env": "5.1.4",
@@ -89,15 +89,15 @@
 		"jasmine-console-reporter": "3.0.0",
 		"less": "3.0.1",
 		"less-loader": "4.1.0",
-		"lodash-webpack-plugin": "0.11.4",
+		"lodash-webpack-plugin": "0.11.5",
 		"ng-annotate-loader": "0.6.1",
 		"ng-annotate-patched": "git://github.com/nevcos/ng-annotate-patched.git#es6-class-support",
-		"nib": "^1.1.2",
+		"nib": "1.1.2",
 		"npm-run-all": "4.1.2",
 		"pleasejs": "0.4.2",
 		"pngjs": "3.3.2",
 		"postcss-loader": "2.1.3",
-		"preload-webpack-plugin": "^3.0.0-alpha.1",
+		"preload-webpack-plugin": "3.0.0-alpha.1",
 		"protractor": "5.3.1",
 		"protractor-beautiful-reporter": "1.2.1",
 		"pug": "2.0.3",
