--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
 		"@types/lodash": "4.14.107",
 		"@types/pngjs": "3.3.1",
 		"@types/stream-to-array": "2.3.0",
-		"autoprefixer": "8.2.0",
+		"autoprefixer": "8.3.0",
 		"axios": "0.18.0",
 		"babel-eslint": "8.2.3",
 		"babel-loader": "8.0.0-beta.2",
@@ -101,7 +101,7 @@
 		"protractor-beautiful-reporter": "1.2.1",
 		"pug": "2.0.3",
 		"pug-html-loader": "1.1.5",
-		"pug-loader": "https://github.com/pugjs/pug-loader/tarball/master",
+		"pug-loader": "2.4.0",
 		"raw-loader": "0.5.1",
 		"stream-to-array": "2.3.0",
 		"style-loader": "0.20.3",
@@ -110,11 +110,10 @@
 		"svg-sprite-loader": "3.7.3",
 		"svgo": "1.0.5",
 		"svgo-loader": "2.1.0",
-		"ts-node": "5.0.1",
 		"typescript": "2.8.1",
 		"uglifyjs-webpack-plugin": "1.2.4",
 		"url-loader": "1.0.1",
-		"webpack": "4.5.0",
+		"webpack": "4.6.0",
 		"webpack-bundle-analyzer": "2.11.1",
 		"webpack-cli": "2.0.14",
 		"webpack-dev-server": "3.1.3",
