--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
 		"parse-uri": "1.0.0",
 		"showdown": "1.8.6",
 		"traverse": "0.6.6",
-		"video.js": "6.8.0"
+		"video.js": "6.9.0",
+		"videojs-sublime-skin": "1.0.3"
 	},
 	"devDependencies": {
 		"@babel/core": "7.0.0-beta.46",
