chore: Setup Firebase deployement.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"build:prod": "run-s build:clean build:prod:run",
 		"build:local": "run-s build:clean build:local:run",
 		"build:test": "run-s build:clean build:test:run",
+		"build:firebase": "run-s build:clean build:firebase:run",
 		"build:browserstack": "run-s build:clean build:browserstack:run",
 		"build:analyze": "run-s build:clean build:analyze:run",
 		"lint": "eslint src/**/*.js",
@@ -26,6 +27,7 @@
 		"build:prod:run": "cross-env ENV=prod CONFIG=prod webpack --bail --progress --profile",
 		"build:local:run": "cross-env ENV=prod CONFIG=local webpack --bail --progress --profile --json > stats.json",
 		"build:test:run": "cross-env ENV=test CONFIG=test webpack --bail --progress --profile",
+		"build:firebase:run": "cross-env ENV=prod CONFIG=firebase webpack --bail --progress --profile",
 		"build:browserstack:run": "cross-env ENV=prod CONFIG=browserstack webpack --bail --progress --profile",
 		"build:analyze:run": "cross-env CONFIG=prod ENV=analyze webpack --bail --progress --profile",
 		"test:clean": "rimraf ./test ./report",
