ci: Add Lighthouse reports.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "8.1.3"
+  - "10"
 install:
   - npm install
 before_script:
@@ -9,3 +9,4 @@ script:
   - npm run build:firebase
 after_success:
   - firebase deploy --token $FIREBASE_TOKEN --non-interactive
+  - npm run lh -- --perf=85 --pwa=100 --seo=100 --a11y=100 --bp=100 https://vpdb-lighthouse.firebaseapp.com
