chore(test): Use latest chrome driver.

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
 		"lint": "eslint src/**/*.js",
 		"test:local": "run-s lint test:clean test:compile test:protractor:local",
 		"test:browserstack": "run-s lint test:clean test:compile test:protractor:browserstack",
-		"selenium:init": "node_modules/.bin/webdriver-manager update --versions.chrome 2.35",
-		"selenium": "node_modules/.bin/webdriver-manager start --versions.chrome 2.35",
+		"selenium:init": "node_modules/.bin/webdriver-manager update",
+		"selenium": "node_modules/.bin/webdriver-manager start",
 		"selenium:edge": "MicrosoftWebDriver",
 		"build:clean": "rimraf ./dist",
 		"build:prod:run": "cross-env ENV=prod CONFIG=prod webpack --bail --progress --profile",
